[gd_scene load_steps=8 format=2]

[ext_resource path="res://Maps/Test_Map/Assest/Test_Map_Background.png" type="Texture" id=1]
[ext_resource path="res://Maps/Assets/Spawn_Towers_Indicator.png" type="Texture" id=2]
[ext_resource path="res://Maps/Test_Map/Test_Map.gd" type="Script" id=3]
[ext_resource path="res://Maps/Assets/Spawn_Towers_Menu.png" type="Texture" id=4]

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -67, 167, 0, 0, 0, 0, 539, 168, 0, 0, 0, 0, 537, 396, 0, 0, 0, 0, 1073, 396 )
}

[sub_resource type="GDScript" id=1]
script/source = "extends Area2D

var tower_slot_clicked = false
var spawning_tower = null


onready var third_eyed_head = load(\"res://Entities/Cleansers/Third_Eyed_Head/Third_Eyed_Head.tscn\")


func _ready():
	$Tower_Slot_1/Tower_Preview.texture = load(\"res://Entities/Cleansers/Third_Eyed_Head/Assets/Third_Eyed_Head.png\")


func _physics_process(_delta):
	pass

func _on_Tower_Slot_1_input_event(_viewport, _event, _shape_idx):
	if spawning_tower == null:
		if Input.is_action_just_pressed(\"left_click\"):
			tower_slot_clicked = true
		elif Input.is_action_just_released(\"left_click\") and tower_slot_clicked:
			spawning_tower = third_eyed_head.instance()
			get_parent().add_child(spawning_tower)
			tower_slot_clicked = false


func _on_Tower_Slot_1_mouse_exited():
	if spawning_tower == null and Input.is_action_pressed(\"left_click\"):
		spawning_tower = third_eyed_head.instance()
		get_parent().add_child(spawning_tower)
		tower_slot_clicked = false
"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 75, 75 )

[node name="Test_Map" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="Road" type="Area2D" parent="." groups=["No_Build"]]

[node name="Road_Hit_Box" type="CollisionPolygon2D" parent="Road"]
polygon = PoolVector2Array( 0, 136, 570, 136, 570, 362, 1024, 362, 1024, 426, 506, 426, 506, 200, 0, 200 )

[node name="Path" type="Path2D" parent="Road"]
curve = SubResource( 3 )

[node name="Spawn_Tower_Menu" type="Area2D" parent="."]
z_index = 1
script = SubResource( 1 )

[node name="Indicator_Hit_Box" type="CollisionPolygon2D" parent="Spawn_Tower_Menu"]
polygon = PoolVector2Array( 384, 600, 384, 582, 385, 580, 389, 577, 394, 575, 401, 573, 411, 571, 431, 569, 586, 569, 605, 570, 618, 572, 623, 573, 630, 575, 635, 577, 638, 579, 640, 582, 640, 600 )

[node name="Indicator" type="Sprite" parent="Spawn_Tower_Menu/Indicator_Hit_Box"]
position = Vector2( 512, 584.4 )
scale = Vector2( 0.25, 0.1 )
texture = ExtResource( 2 )

[node name="Menu_Hit_Box" type="CollisionPolygon2D" parent="Spawn_Tower_Menu"]
polygon = PoolVector2Array( 0, 600, 1024, 600, 1024, 751, 0, 750 )

[node name="Menu" type="Sprite" parent="Spawn_Tower_Menu/Menu_Hit_Box"]
position = Vector2( 512, 675 )
texture = ExtResource( 4 )

[node name="Tower_Slot_1" type="Area2D" parent="Spawn_Tower_Menu"]

[node name="Slot_1_Hit_Box" type="CollisionShape2D" parent="Spawn_Tower_Menu/Tower_Slot_1"]
position = Vector2( 162, 675 )
shape = SubResource( 2 )

[node name="Tower_Preview" type="Sprite" parent="Spawn_Tower_Menu/Tower_Slot_1"]
position = Vector2( 162, 675 )
scale = Vector2( 4.6875, 4.6875 )

[connection signal="mouse_entered" from="Spawn_Tower_Menu" to="." method="_on_Spawn_Tower_Menu_mouse_entered"]
[connection signal="mouse_exited" from="Spawn_Tower_Menu" to="." method="_on_Spawn_Tower_Menu_mouse_exited"]
[connection signal="input_event" from="Spawn_Tower_Menu/Tower_Slot_1" to="Spawn_Tower_Menu" method="_on_Tower_Slot_1_input_event"]
[connection signal="mouse_exited" from="Spawn_Tower_Menu/Tower_Slot_1" to="Spawn_Tower_Menu" method="_on_Tower_Slot_1_mouse_exited"]
